<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/weather_description"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#002E3BA1"
    android:orientation="vertical">

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Location"
        android:textColor="#F8F8FF"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/weather_icon"
        android:layout_width="200dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location"
        app:srcCompat="@drawable/cloud"
        android:contentDescription="@string/weather_icon_description" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        android:textColor="#F8F8FF"
        android:textSize="100sp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="@+id/weather_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weather_icon" />

    <TextView
        android:id="@+id/rain_possibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="40dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/precipitation"
        android:textColor="#F8F8FF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/temperature"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rain_image" />

    <ImageView
        android:id="@+id/rain_image"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/rain_possibility"
        app:layout_constraintStart_toEndOf="@+id/temperature"
        app:srcCompat="@drawable/rain_drop"
        android:contentDescription="@string/raindrop_image" />

    <ImageView
        android:id="@+id/wind_speed_image"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/wind_speed"
        app:layout_constraintStart_toStartOf="@+id/rain_image"
        app:srcCompat="@drawable/wind_speed"
        android:contentDescription="@string/image_representing_wind"/>

    <TextView
        android:id="@+id/wind_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/windSpeed"
        android:textColor="#F8F8FF"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintLeft_toLeftOf="@+id/rain_possibility"
        app:layout_constraintRight_toRightOf="@id/rain_possibility"
        app:layout_constraintTop_toTopOf="@+id/temperature" />



</androidx.constraintlayout.widget.ConstraintLayout>