<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:title=""
            app:titleTextColor="@android:color/white"/>

    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_marginTop="?attr/actionBarSize">


        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:padding="10dp"
            android:text="@string/current_location_here"
            android:textColor="#F8F8FF"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/weather_icon"
            android:layout_width="200dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location"
            app:srcCompat="@drawable/cloud"
            android:contentDescription="@string/weather_icon_description" />


        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/_26_xb0"
            android:textColor="#F8F8FF"
            android:textSize="100sp"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.222"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weather_icon" />

        <TextView
            android:id="@+id/rain_possibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="40dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/precipitation"
            android:textColor="#F8F8FF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/temperature"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rain_image" />

        <ImageView
            android:id="@+id/rain_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/rain_possibility"
            app:layout_constraintStart_toEndOf="@+id/temperature"
            app:srcCompat="@drawable/rain_drop"
            android:contentDescription="@string/raindrop_image" />

        <ImageView
            android:id="@+id/wind_speed_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/wind_speed"
            app:layout_constraintStart_toStartOf="@+id/rain_image"
            app:srcCompat="@drawable/wind_speed"
            android:contentDescription="@string/image_representing_wind"/>


        <TextView
            android:id="@+id/wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:text="@string/windSpeed"
            android:textColor="#F8F8FF"
            android:textSize="20sp"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintLeft_toLeftOf="@+id/rain_possibility"
            app:layout_constraintRight_toRightOf="@id/rain_possibility"
            app:layout_constraintTop_toTopOf="@+id/temperature" />

        <ProgressBar
            android:id="@+id/loading_indicator"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weather_icon" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorAccent"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:clipToPadding="false"
        app:menu="@menu/main_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
